# Otus-CPP-BN3

./: README.md
game/: CMakeLists.txt  check_value.cpp  high_scores.cpp  high_scores.h  random_value.cpp  random_value.h
